--- a/index.html
+++ b/index.html
@@ -1,57 +1,18 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta http-equiv=Content-Type content="text/html;charset=UTF-8">
-  <meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no">
-  <meta name=apple-mobile-web-app-capable content=yes>
-  <meta name=apple-mobile-web-app-status-bar-style content=black>
-  <meta name=format-detection content="telephone=no">
-  <link rel=icon href=home.png>
-  <title>全科h5</title>
-  <link href=css/chunk-16755b0a.46524d9d.css rel=prefetch>
-  <link href=css/chunk-1c554641.ba44eea0.css rel=prefetch>
-  <link href=css/chunk-21c40176.35a3380c.css rel=prefetch>
-  <link href=css/chunk-2dac9249.1ee830c5.css rel=prefetch>
-  <link href=css/chunk-399c54d2.4455330c.css rel=prefetch>
-  <link href=css/chunk-4ccbcbc6.d1d8283d.css rel=prefetch>
-  <link href=css/chunk-557bfdff.688aad5d.css rel=prefetch>
-  <link href=css/chunk-662ac838.231c38bb.css rel=prefetch>
-  <link href=css/chunk-6b164a9f.bd583bc9.css rel=prefetch>
-  <link href=css/chunk-6d1f788d.4bd88b32.css rel=prefetch>
-  <link href=css/chunk-94c6fe90.f30262d5.css rel=prefetch>
-  <link href=css/chunk-adf6e90e.48643116.css rel=prefetch>
-  <link href=css/chunk-ba663f14.59bc5033.css rel=prefetch>
-  <link href=css/chunk-c64f8cb4.9518d894.css rel=prefetch>
-  <link href=css/chunk-d395d902.b260c740.css rel=prefetch>
-  <link href=js/chunk-16755b0a.1c898f35.js rel=prefetch>
-  <link href=js/chunk-1c554641.4d95fddf.js rel=prefetch>
-  <link href=js/chunk-21c40176.afbbd340.js rel=prefetch>
-  <link href=js/chunk-2dac9249.5d066d2c.js rel=prefetch>
-  <link href=js/chunk-399c54d2.00508b1b.js rel=prefetch>
-  <link href=js/chunk-4ccbcbc6.755d6c51.js rel=prefetch>
-  <link href=js/chunk-557bfdff.7523a227.js rel=prefetch>
-  <link href=js/chunk-662ac838.ac797d5c.js rel=prefetch>
-  <link href=js/chunk-6b164a9f.28049c1a.js rel=prefetch>
-  <link href=js/chunk-6d1f788d.5f70a8bf.js rel=prefetch>
-  <link href=js/chunk-94c6fe90.117e22b4.js rel=prefetch>
-  <link href=js/chunk-adf6e90e.b99da150.js rel=prefetch>
-  <link href=js/chunk-b6fac592.a734989d.js rel=prefetch>
-  <link href=js/chunk-ba663f14.c48e7e81.js rel=prefetch>
-  <link href=js/chunk-c64f8cb4.eaea3527.js rel=prefetch>
-  <link href=js/chunk-d395d902.14527e99.js rel=prefetch>
-  <link href=css/app.95a34f06.css rel=preload as=style>
-  <link href=css/chunk-vendors.e736f5c8.css rel=preload as=style>
-  <link href=js/app.ccec1007.js rel=preload as=script>
-  <link href=js/chunk-vendors.c5c079d0.js rel=preload as=script>
-  <link href=css/chunk-vendors.e736f5c8.css rel=stylesheet>
-  <link href=css/app.95a34f06.css rel=stylesheet>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="./main.css" rel="stylesheet">
 </head>
-
-<body><noscript><strong>We're sorry but vue doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong></noscript>
-      777
-  <div id=app></div>
-  <script src=./signature_pad.min.js> </script> <script src=./config.js> </script> <script src=./echarts.min.js>
-  </script> <script src=js/chunk-vendors.c5c079d0.js> </script> <script src=js/app.ccec1007.js> </script> </body>
-    </html>
+<body>
+    <div class="div">777</div>
+    <div id="refresh">点击刷新</div>
+    <img src="./star.jpg">
+    <img src="./slideX.jpg">
+    <script src="./index.js"></script>
+    <script src="./main.js"></script>
+</body>
+</html>
