--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="div">888</div>
     <div id="refresh">点击刷新</div>
+    <a href="gps.html">定位</a>
     <img src="./star.jpg">
     <img src="./slideX.jpg">
     <script src="./index.js"></script>
