--- a/gps.html
+++ b/gps.html
@@ -24,7 +24,7 @@
     };
 
     function error(err) {
-      console.warn('ERROR(' + err.code + '): ' + err.message);
+      alert('ERROR(' + err.code + '): ' + err.message);
     };
 
     navigator.geolocation.getCurrentPosition(success, error, options);
